fix image too small in cards sanity

--- a/apps/sanity-frontend/components/ArticleCard/ArticleCard.css
+++ b/apps/sanity-frontend/components/ArticleCard/ArticleCard.css
@@ -103,8 +103,8 @@
     height: 100%;
     object-fit: cover;
     border-radius: 8px;
-    max-width: 300px;
-    max-height: 300px;
+    /*     max-width: 300px;
+    max-height: 300px; */
 }
 
 .article-image-placeholder {
